Fix sidebar/footer z-index bug

--- a/sass/globals.scss
+++ b/sass/globals.scss
@@ -120,6 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 footer {
+  z-index: 1;
   background-color: #000;
   width: 100%;
   color: #fff;
